--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ body {
 }
 
 .ant-list {
-  margin: 0 auto !important;
+  /* margin: 0 auto !important; */
   left: -100px !important;
   margin: 0 auto !important;
 }
