--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 body {
   overflow-x: hidden;
 }
+
 /* .App {
    position: relative; 
   text-align: center;
@@ -14,14 +15,17 @@ body {
   align-items: flex-start;
 } */
 
- .Sidebar {
-  position: fixed;
-   position: relative; 
-   bottom: 0; 
+.Sidebar {
+  /* position: fixed; */
+  /* position: sticky; */
+  position: relative;
+  bottom: 0;
+  /* left: 0; */
   display: flex;
   flex-direction: column;
   /* max-width: 25%; */
-  min-width: 162px; 
+  /* min-width: 162px; */
+  /* width: 100%; */
   /* min-height: 72px; */
   /* width: 256px; */
   height: 100vh;
@@ -29,8 +33,8 @@ body {
   /* background-color: #010c17; */
   color: #FFF;
   /* box-shadow: 2px 0px 4px 0px rgba(35, 52, 71, 0.7); */
-   
-} 
+
+}
 
 .Logo {
   position: fixed;
@@ -42,6 +46,11 @@ body {
   background-color: #0756aa;
   font-family: 'Quicksand', sans-serif;
   font-size: 1.5em;
+  /* margin: 0 auto; */
+  /* padding: 0 10px; */
+  /* margin: 10px; */
+  /* min-width: 15%; */
+  /* width: 100%; */
   font-weight: lighter;
   box-shadow: 2px 0px 4px 0px rgba(35, 52, 71, 0.678);
   /* border-right: 2px solid rgba(27, 66, 107, 0.6); */
@@ -52,13 +61,27 @@ body {
   padding: 20px;
 }
 
+/* .SideMenu-wrapper {
+  display: flex;
+} */
+
+.Menu-wrapper {
+  position: absolute;
+  /* width: 90%; */
+  /* margin: 0; */
+}
+
 .SideMenu {
+  /* display: block; */
   /* position: relative; */
   position: fixed;
   margin-top: 15vh;
+  /* padding: 10px; */
   /* top: 90%; */
   text-align: center;
   background-color: #1C2541;
+  /* min-width: 15%; */
+  width: 100%;
 }
 
 
@@ -91,8 +114,8 @@ body {
   margin: 0 auto;
 } */
 .Wrapper {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   min-width: 100%;
   min-height: 100%;
 }
@@ -123,6 +146,10 @@ body {
   flex-direction: column-reverse;
 }
 
+.Spending {
+  padding: 80px;
+}
+
 
 
 
@@ -136,14 +163,42 @@ body {
   padding: 5px 24px !important;
   max-width: 90% !important;
   margin: 10px 0 10px !important;
-  border-radius: 2px !important; 
+  border-radius: 2px !important;
 }
 
 .ant-list {
   /* margin: 0 auto !important; */
+  /* position: relative; */
+  /* top: 100px; */
   left: -100px !important;
   margin: 0 auto !important;
 }
+
+.ant-layout-header {
+  position: fixed !important;
+  /* display: block !important; */
+  width: 100% !important;
+  z-index: 2;
+}
+
+.ant-layout-content {
+  /* margin-top: 100px !important; */
+  position: relative;
+  top: 64px;
+}
+
+/* .ant-layout-sider .ant-layout-sider-dark {
+  min-width: 200px !important;
+} */
+
+/* .ant-layout-sider-children {
+  min-width: 200px !important;
+} */
+
+/* .ant-menu-item {
+  /* margin: 0 10px !important; 
+  padding: 0 100px;
+} */
 
 
 
@@ -151,11 +206,13 @@ body {
 
 
 #copyright {
-  width: 100%;
+  display: block;
+  /* width: 100%; */
   padding: 20px;
   position: fixed;
   /* margin-top: 12vh; */
-  margin-top: auto;
+  /* margin-top: auto; */
+  margin: 0 auto;
   /* top: 100%; */
   /* position: absolute; */
   bottom: 0;
@@ -168,6 +225,7 @@ body {
 }
 
 #transactions {
+  /* position: relative; */
   border: 1px solid grey;
   border-radius: 10px;
   max-width: 70%;
@@ -186,7 +244,12 @@ body {
 }
 
 #date {
+  /* position: ; */
+  display: block;
   font-size: 1.2em;
+  /* margin-top: 100px; */
+  /* top: 100px; */
+  
   margin-left: 15%;
   padding: 20px 10px;
   margin: 0 auto;
@@ -198,18 +261,23 @@ body {
   border: 2px solid #EF7A85;
   border-radius: 5px;
 }
+
 #income-tab {
   padding: 20px;
   border: 2px solid #7DDF64;
   border-radius: 5px;
 }
+
 #transfer-tab {
   padding: 20px;
   border: 2px solid rgba(0, 225, 255, 0.61);
   border-radius: 5px;
 }
 
-#amount, #category, #date, #notes {
+#amount,
+#category,
+#date,
+#notes {
   width: 90%;
   /* margin: 5px; */
   /* display: block; */
@@ -219,7 +287,3 @@ body {
 #save {
   margin: 20px;
 }
-
-
-
-
