--- a/src/App.css
+++ b/src/App.css
@@ -3,287 +3,171 @@
 @import '../node_modules/antd/dist/antd.css';
 
 body {
-  overflow-x: hidden;
+	overflow-x: hidden;
 }
 
-/* .App {
-   position: relative; 
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  min-height: 100%;
-  align-items: flex-start;
-} */
-
 .Sidebar {
-  /* position: fixed; */
-  /* position: sticky; */
-  position: relative;
-  bottom: 0;
-  /* left: 0; */
-  display: flex;
-  flex-direction: column;
-  /* max-width: 25%; */
-  /* min-width: 162px; */
-  /* width: 100%; */
-  /* min-height: 72px; */
-  /* width: 256px; */
-  height: 100vh;
-  /* overflow: hidden; */
-  /* background-color: #010c17; */
-  color: #FFF;
-  /* box-shadow: 2px 0px 4px 0px rgba(35, 52, 71, 0.7); */
-
+	position: relative;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	color: #fff;
 }
 
 .Logo {
-  position: fixed;
-
-  display: flex;
-  /* justify-self: center; */
-  justify-content: center;
-  /* margin: auto; */
-  background-color: #0756aa;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 1.5em;
-  /* margin: 0 auto; */
-  /* padding: 0 10px; */
-  /* margin: 10px; */
-  /* min-width: 15%; */
-  /* width: 100%; */
-  font-weight: lighter;
-  box-shadow: 2px 0px 4px 0px rgba(35, 52, 71, 0.678);
-  /* border-right: 2px solid rgba(27, 66, 107, 0.6); */
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	background-color: #0756aa;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 1.5em;
+	font-weight: lighter;
+	box-shadow: 2px 0px 4px 0px rgba(35, 52, 71, 0.678);
 }
 
 .App-logo {
-  /* color: #FFF; */
-  padding: 20px;
+	padding: 20px;
 }
 
-/* .SideMenu-wrapper {
-  display: flex;
-} */
-
 .Menu-wrapper {
-  position: absolute;
-  /* width: 90%; */
-  /* margin: 0; */
+	position: absolute;
 }
 
 .SideMenu {
-  /* display: block; */
-  /* position: relative; */
-  position: fixed;
-  margin-top: 15vh;
-  /* padding: 10px; */
-  /* top: 90%; */
-  text-align: center;
-  background-color: #1C2541;
-  /* min-width: 15%; */
-  width: 100%;
+	position: fixed;
+	margin-top: 15vh;
+	text-align: center;
+	background-color: #1c2541;
+	width: 100%;
 }
-
-
-
-/* .Topbar {
-  min-width: 100%;
-  min-height: 72px;
-  height: 2em;
-  background-color: #0756aa;
-  color: #FFF;
-  font-size: 2em;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-} */
 
 .AffixButton {
-  position: fixed;
-  /* opacity: 30% !important; */
-  top: 90%;
-  right: 8%;
-  text-align: center;
-  z-index: 2;
+	position: fixed;
+	top: 90%;
+	right: 8%;
+	text-align: center;
+	z-index: 2;
 }
 
-/* .Wrapper {
-  /* display: flex;
-  flex-direction: column; 
-  position: relative;
-  /* left: 100px; 
-  /* right: 100%; 
-  margin: 0 auto;
-} */
 .Wrapper {
-  /* display: flex; */
-  /* flex-direction: column; */
-  min-width: 100%;
-  min-height: 100%;
+	min-width: 100%;
+	min-height: 100%;
 }
-
-/* .Content{
-  background-color: red;
-} */
 
 .Title {
-  display: block;
-  position: fixed;
-  color: #FFF;
-  font-size: 2em;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-
+	display: block;
+	position: fixed;
+	color: #fff;
+	font-size: 2em;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei',
+		'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 .Accounts {
-  padding: 30px;
+	padding: 30px;
 }
 
 .TabInterface {
-  padding: 20px;
+	padding: 20px;
 }
 
 .Journal {
-  display: flex;
-  flex-direction: column-reverse;
+	display: flex;
+	flex-direction: column-reverse;
 }
 
 .Spending {
-  padding: 80px;
+	padding: 80px;
 }
 
-
-
-
-
-
-
-
 .ant-page-header {
-  position: fixed !important;
-  background-color: #eff2f5 !important;
-  padding: 5px 24px !important;
-  max-width: 90% !important;
-  margin: 10px 0 10px !important;
-  border-radius: 2px !important;
+	position: fixed !important;
+	background-color: #eff2f5 !important;
+	padding: 5px 24px !important;
+	max-width: 90% !important;
+	margin: 10px 0 10px !important;
+	border-radius: 2px !important;
 }
 
 .ant-list {
-  /* margin: 0 auto !important; */
-  /* position: relative; */
-  /* top: 100px; */
-  left: -100px !important;
-  margin: 0 auto !important;
+	left: -100px !important;
+	margin: 0 auto !important;
 }
 
 .ant-layout-header {
-  position: fixed !important;
-  /* display: block !important; */
-  width: 100% !important;
-  z-index: 2;
+	position: fixed !important;
+	width: 100% !important;
+	z-index: 2;
 }
 
 .ant-layout-content {
-  /* margin-top: 100px !important; */
-  position: relative;
-  top: 64px;
+	position: relative;
+	margin-top: 64px;
 }
 
-/* .ant-layout-sider .ant-layout-sider-dark {
-  min-width: 200px !important;
-} */
-
-/* .ant-layout-sider-children {
-  min-width: 200px !important;
-} */
-
-/* .ant-menu-item {
-  /* margin: 0 10px !important; 
-  padding: 0 100px;
-} */
-
-
-
-
-
-
 #copyright {
-  display: block;
-  /* width: 100%; */
-  padding: 20px;
-  position: fixed;
-  /* margin-top: 12vh; */
-  /* margin-top: auto; */
-  margin: 0 auto;
-  /* top: 100%; */
-  /* position: absolute; */
-  bottom: 0;
-  font-size: 0.8em;
-  color: rgba(240, 255, 255, 0.9)
+	padding: 20px;
+	position: fixed;
+	margin: 0 auto;
+	bottom: 0;
+	font-size: 0.8em;
+	color: rgba(240, 255, 255, 0.9);
 }
 
 #add {
-  font-size: 1.5em;
+	font-size: 1.5em;
 }
 
 #transactions {
-  /* position: relative; */
-  border: 1px solid grey;
-  border-radius: 10px;
-  max-width: 70%;
-  /* margin: 10px auto 30px; */
-  padding: 25px;
+	border: 1px solid grey;
+	border-radius: 10px;
+	max-width: 70%;
+	padding: 25px;
 }
 
 #total {
-  color: #f44336;
-  position: relative;
-  top: -50px;
-  /* bottom: 20%; */
-  padding-left: 90%;
-  font-weight: bold;
-  font-size: 1.5em;
+	color: #f44336;
+	position: relative;
+	top: -50px;
+	padding-left: 90%;
+	font-weight: bold;
+	font-size: 1.5em;
 }
 
 #date {
-  /* position: ; */
-  display: block;
-  font-size: 1.2em;
-  /* margin-top: 100px; */
-  /* top: 100px; */
-  
-  margin-left: 15%;
-  padding: 20px 10px;
-  margin: 0 auto;
+	display: block;
+	font-size: 1.2em;
+	margin-left: 15%;
+	padding: 20px 10px;
+	margin: 0 auto;
 }
 
 #spending-tab {
-  /* background-color: rgba(255, 60, 0, 0.61); */
-  padding: 20px;
-  border: 2px solid #EF7A85;
-  border-radius: 5px;
+	padding: 20px;
+	border: 2px solid #ef7a85;
+	border-radius: 5px;
 }
 
 #income-tab {
-  padding: 20px;
-  border: 2px solid #7DDF64;
-  border-radius: 5px;
+	padding: 20px;
+	border: 2px solid #7ddf64;
+	border-radius: 5px;
 }
 
 #transfer-tab {
-  padding: 20px;
-  border: 2px solid rgba(0, 225, 255, 0.61);
-  border-radius: 5px;
+	padding: 20px;
+	border: 2px solid rgba(0, 225, 255, 0.61);
+	border-radius: 5px;
 }
 
 #amount,
 #category,
 #date,
 #notes {
-  width: 90%;
-  /* margin: 5px; */
-  /* display: block; */
-  /* padding: 20px; */
+	width: 90%;
 }
 
 #save {
-  margin: 20px;
+	margin: 20px;
 }
